# template-django

./: .env.test  .gitignore  Makefile  README.md  coverage.cfg  create_project.py  manage.py  pyproject.toml  setup.cfg
app/: asgi.py.j2  settings.py.j2  urls.py  wsgi.py
app-name/: README.md  asgi.py  settings.py  urls.py  wsgi.py
jinja_templates/: .env.local.j2  Makefile.j2  settings.py.j2
requirements/: dev.txt
static/: README.md
tests/: README.md
