[tool.poetry]
name = "template-django"
version = "0.1.2"
description = "Template for starting a new Django app"
authors = ["Rory Strahan-Mauk <rorystrahanmauk@gmail.com>"]
license = "GNU Affero General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.12.7"
django = "^5.1.2"
django-filter = "^24.3"
django-guardian = "^2.4.0"
django-permissions-policy = "^4.22.0"
djangorestframework = "^3.15.2"
jinja2 = "^3.1.4"
markdown = "^3.7"
psycopg = {extras = ["binary"], version = "^3.2.3"}
psycopg2 = "^2.9.10"
pygments = "^2.18.0"
pyyaml = "^6.0.2"
uritemplate = "^4.1.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
coverage = "^7.6.4"
flake8 = "^7.1.1"
honcho = "^2.0.0"
ipython = "^8.28.0"
mypy = "^1.12.1"
pytest = "^8.3.3"

[build-system]
requires = [
    "poetry-core>=1.0.7",
]
build-backend = "poetry.core.masonry.api"
