[tool.poetry]
name = "template-django"
version = "0.1.2"
description = "Template for starting a new Django app"
authors = ["Rory Strahan-Mauk <rorystrahanmauk@gmail.com>"]
license = "GNU Affero General Public License v3.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.10"
django = "^5.2"
django-filter = "^25.1"
django-guardian = "^2.4.0"
django-permissions-policy = "^4.25.0"
djangorestframework = "^3.16.0"
jinja2 = "^3.1.6"
markdown = "^3.8"
psycopg = {extras = ["binary"], version = "^3.2.6"}
psycopg2 = "^2.9.10"
pygments = "^2.19.1"
pyyaml = "^6.0.2"
uritemplate = "^4.1.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
coverage = "^7.8.0"
flake8 = "^7.2.0"
honcho = "^2.0.0"
ipython = "^9.1.0"
mypy = "^1.15.0"
pytest = "^8.3.5"

[build-system]
requires = [
    "poetry-core>=1.0.7",
]
build-backend = "poetry.core.masonry.api"
